Code for the Raspberry PI/ROS Workspace/emli5_ws/log/build_2023-06-05_16-46-41/plantsystem/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/emli_WS/install/plantsystem/lib/python3.10/site-packages/plantsystem/pi_node.py", line 76
    if (self.Pump == True) and (self.Plant == True) and (self.Moisture = True):
                                                         ^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

